Update Css Style

--- a/index.html
+++ b/index.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="app">
-        <h1>Simple Quiz</h1>
-        <div class="quiz">
-            <h2 id="question">Question goes here</h2>
-            <div id="answer-buttons">
-                <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
+        <header class="app-header">
+            <h1>Simple Quiz</h1>
+        </header>
+        <main class="quiz">
+            <div class="quiz-container">
+                <h2 id="question">Question goes here</h2>
+                <div id="answer-buttons" class="answer-buttons">
+                    <button class="btn">Answer 1</button>
+                    <button class="btn">Answer 2</button>
+                    <button class="btn">Answer 3</button>
+                    <button class="btn">Answer 4</button>
+                </div>
+                <button id="next-btn" class="btn next-btn">Next</button>
             </div>
-            <button id="next-btn">Next</button>
-        </div>
+        </main>
     </div>
+    <footer class="footer">
+        <div class="container">
+            <hr class="footer-divider">
+            <p class="footer-text">
+                © <span id="footer-year"></span> Jahed Ahmed Ripon —
+                <a href="https://github.com/jahedripon9" target="_blank">jahedripon9</a>
+            </p>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
